--- a/index.html
+++ b/index.html
@@ -64,6 +64,32 @@
     
         </section>
 
+        <!-- service sectionn start fron hear. -->
+        <section>
+            <h1 class="better">Our Service's</h1>
+            <div class="service-container">
+                <div class="box">
+                    <img class="icon" src="./icon/0.png" alt="">
+                    <h2 class="box-title">Web development</h2>
+                    <p class="box-dis">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat dicta voluptatibus voluptas officiis deleniti ab quos aspernatur fuga, culpa architecto!</p>
+                    <button class="button btn">Details</button>
+                </div>
+                <div class="box">
+                    <img class="icon" src="./icon/1.png" alt="">
+                    <h2 class="box-title">Digital Art</h2>
+                    <p class="box-dis">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat dicta voluptatibus voluptas officiis deleniti ab quos aspernatur fuga, culpa architecto!</p>
+                    <button class="button btn">Details</button>
+                </div>
+                <div class="box">
+                    <img class="icon" src="./icon/2.png" alt="">
+                    <h2 class="box-title">Web development</h2>
+                    <p class="box-dis">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat dicta voluptatibus voluptas officiis deleniti ab quos aspernatur fuga, culpa architecto!</p>
+                    <button class="button btn">Details</button>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
     <footer>
